# Dagster-dlt-dbt-pipeline

./: .env.example  DockerPostgres.session.sql  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
data_extract_load/: load_data.py
data_transformation/: dbt_project.yml
data_transformation/anime_seasonal/models/gold/: dim_airing.sql  dim_info.sql  dim_season.sql  dim_studios.sql  fact_anime.sql  schema.yml
data_transformation/anime_seasonal/models/mart/: anime_season_performance.sql  studio_performance.sql  top_10_anime_of_all_time.sql
data_transformation/anime_seasonal/models/silver/: cleaned_data.sql
data_transformation/anime_seasonal/models/src/: sources.yml
orchestration/: definitions.py
orchestration/.dlt/: secrets.toml
orchestration/.tmp_dagster_home_s8719ah8/history/: runs.db
orchestration/.tmp_dagster_home_s8719ah8/history/runs/: index.db
orchestration/.tmp_dagster_home_s8719ah8/schedules/: schedules.db
